# viu

./: .envrc  .gitignore  CONTRIBUTIONS.md  DISCLAIMER.md  PLUGINS.md  README.md  fa  flake.nix  make_release  product_validation.py  pyproject.toml  pytest.ini  shell.nix  test_auth_display.py  test_auth_flow.py  test_feedback.py  test_session_management.py  test_watch_history.py  tox.ini  viu
.github/: FUNDING.yml  copilot-instructions.md
.github/chatmodes/: new-command.chatmode.md  new-component.chatmode.md  new-provider.chatmode.md  plan.chatmode.md
.github/workflows/: build.yml  publish.yml  test.yml
bundle/: Dockerfile  pyinstaller.spec
completions/: viu.bash  viu.fish  viu.zsh
dev/: generate_completions.sh  make_release
examples/plugins/player/: config.toml  player.py  plugin.info.toml
examples/plugins/provider/: config.toml  extractor.py  mappers.py  plugin.info.toml  provider.py  types.py
fastanime/: AnimeProvider.py  __init__.py  __main__.py  fastanime.py
fastanime/Utility/downloader/: downloader.py
fastanime/api/: api.py
fastanime/assets/: normalizer.json
fastanime/assets/defaults/: ascii-art  fastanime-worker.template.service  fzf-opts
fastanime/cli/: __init__.py  app_updater.py  cli.py  config.py  constants.py  options.py
fastanime/cli/auth/: __init__.py  manager.py
fastanime/cli/commands/: __init__.py  completions.py  config.py  download.py  downloads.py  examples.py  grab.py  helpers.py  queue.py  search.py  service.py  update.py  worker.py
fastanime/cli/config/: __init__.py  editor.py  generate.py  interactive_editor.py  loader.py  model.py
fastanime/cli/interactive/: session.py  state.py  ui.py
fastanime/cli/interfaces/: anilist_interfaces.py  utils.py
fastanime/cli/utils/: __init__.py  ansi.py  auth_utils.py  completion.py  completions.py  converters.py  download_queue.py  exception.py  exceptions.py  feedback.py  formatters.py  icat.py  image.py  lazyloader.py  logging.py  mpv.py  parser.py  preview.py  preview_workers.py  previews.py  print_img.py  scripts.py  session_manager.py  tools.py  update.py  utils.py  watch_history_manager.py  watch_history_tracker.py  watch_history_types.py
fastanime/core/: constants.py  exceptions.py  patterns.py
fastanime/core/caching/: mini_anilist.py
fastanime/core/config/: __init__.py  defaults.py  descriptions.py  model.py
fastanime/core/downloader/: __init__.py  base.py  default.py  downloader.py  model.py  params.py  torrents.py  yt_dlp.py
fastanime/core/utils/: __init__.py  detect.py  file.py  formatter.py  formatters.py  formatting.py  fuzzy.py  graphql.py  networking.py  normalizer.py
fastanime/libs/anilist/: __init__.py  api.py  gql.py  queries_graphql.py
fastanime/libs/anime_provider/: __init__.py
fastanime/libs/aniskip/: api.py
fastanime/libs/api/: base.py  factory.py  params.py  types.py
fastanime/libs/common/: mini_anilist.py  requests_cacher.py  sqlitedb_helper.py
fastanime/libs/discord/: api.py  discord.py
fastanime/libs/fzf/: __init__.py  scripts.py
fastanime/libs/media_api/: api.py  base.py  params.py  types.py
fastanime/libs/player/: __init__.py  base.py  params.py  player.py  types.py
fastanime/libs/players/: __init__.py  base.py  params.py  player.py  types.py
fastanime/libs/providers/: __init__.py
fastanime/libs/rofi/: __init__.py
fastanime/libs/selectors/: __init__.py  base.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.py  test_config_loader.py  test_parser.py  test_tmdb.py  test_torrent_downloader.py
tests/api/anilist/: test_anilist_api.py  test_anilist_api_intergration.py
tests/cli/: __init__.py  test_commands.py  test_session.py
tests/cli/interactive/: README.md  __init__.py  test_session.py
tests/core/: test_config.py
tests/integration/: test_workflows.py
tests/interactive/menus/: README.md  __init__.py  conftest.py  (+11 more)
tests/libs/: test_media_api.py  test_players.py  test_providers.py  test_selectors.py
viu/: __init__.py  viu.py
viu/cli/: cli.py
viu/core/: constants.py  exceptions.py
viu_cli/cli/: cli.py  options.py
viu_cli/core/: constants.py
viu_media/: __init__.py  viu.py
viu_media/assets/: normalizer.json
viu_media/cli/: cli.py
viu_media/core/: constants.py
(+501 files in other folders)
