[project]
name = "fastanime"
version = "2.9.9"
description = "A browser anime site experience from the terminal"
license = "UNLICENSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "click>=8.1.7",
  "httpx>=0.28.1",
  "inquirerpy>=0.3.4",
  "libtorrent>=2.0.11",
  "lxml>=6.0.0",
  "pycryptodome>=3.21.0",
  "pydantic>=2.11.7",
  "pypresence>=4.3.0",
  "requests>=2.32.3",
  "rich>=13.9.2",
  "thefuzz>=0.22.1",
  "yt-dlp[default]>=2024.10.7",
]

[project.scripts]
fastanime = 'fastanime:Cli'

[project.optional-dependencies]
standard = ["fastapi[standard]>=0.115.0", "mpv>=1.0.7", "plyer>=2.1.0"]
api = ["fastapi[standard]>=0.115.0"]
notifications = ["plyer>=2.1.0"]
mpv = ["mpv>=1.0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.0.1",
  "pyinstaller>=6.11.1",
  "pyright>=1.1.384",
  "pytest>=8.3.3",
  "pytest-httpx>=0.35.0",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require a live network connection",
]
