[project]
name = "fastanime"
version = "3.0.0"
description = "A browser anime site experience from the terminal"
license = "UNLICENSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "httpx>=0.28.1",
  "inquirerpy>=0.3.4",
  "pydantic>=2.11.7",
  "rich>=13.9.2",
]

[project.scripts]
fastanime = 'fastanime:Cli'

[project.optional-dependencies]
standard = [
 "lxml>=6.0.0",
 "thefuzz>=0.22.1",
 "yt-dlp>=2025.7.21",
 "pycryptodomex>=3.23.0",
]
notifications = ["plyer>=2.1.0"]
mpv = [
    "mpv>=1.0.7",
]
torrent = ["libtorrent>=2.0.11"]
lxml = ["lxml>=6.0.0"]
discord = ["pypresence>=4.3.0"]
download = [
    "pycryptodomex>=3.23.0",
    "yt-dlp>=2025.7.21",
]
torrents = [
    "libtorrent>=2.0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.0.1",
  "pyinstaller>=6.11.1",
  "pyright>=1.1.384",
  "pytest>=8.3.3",
  "pytest-httpx>=0.35.0",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require a live network connection",
]
